--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,12 @@ services:
     ports:
       - "3000:3000"
       - "5555:5555"
+    volumes:
+      - ./backend:/usr/src/app
+      - /usr/src/app/node_modules
     environment:
       DATABASE_URL: "postgresql://user:password@db:5432/transcendence_db"
+      CHOKIDAR_USEPOLLING: "true"
     depends_on:
       - db
   frontend:
@@ -34,5 +38,8 @@ services:
       - /app/node_modules # Important : pour ne pas écraser les modules node du container
     environment:
       - CHOKIDAR_USEPOLLING=true # Pour que le rafraîchissement auto fonctionne sous Docker
+      - VITE_PORT=5173
+    tty: true
+    stdin_open: true
 volumes:
   pgdata:
