--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,11 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "otplib": "^13.2.1",
     "passport": "^0.7.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -48,6 +50,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-42": "^1.1.2",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
