init google 0Auth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,5 +5,9 @@ DATABASE_URL="postgresql://user:password@localhost:5432/mydb?schema=public"
 FORTYTWO_CLIENT_ID="uid_ici"
 FORTYTWO_CLIENT_SECRET="secret_ici"
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
+
 # JWT
 JWT_SECRET="token_jwt"
